force-app/main/default/objects/FC_CrewEvent__e/FC_CrewEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Event published by FC_CrewQueueable when an async crew run completes or fails. LWC components subscribe via lightning/empApi to receive real-time results.</description>
    <label>Crew Event</label>
    <pluralLabel>Crew Events</pluralLabel>
</CustomObject>