force-app/main/default/objects/FC_CrewEvent__e/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <label>Correlation Id</label>
    <description>Echoed from the originating FC_CrewRun__c. The LWC uses this to match the event to the page/component that started the run.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>