force-app/main/default/objects/FC_CrewEvent__e/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <description>Present when Success = false. Contains the error that caused the crew to fail.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>