force-app/main/default/objects/FC_CrewEvent__e/fields/FinalOutput__c.field-meta.xml
<CustomField>
    <fullName>FinalOutput__c</fullName>
    <label>Final Output</label>
    <description>The crew's final answer. Present when Success = true.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>