force-app/main/default/objects/FC_CrewEvent__e/fields/RunId__c.field-meta.xml
<CustomField>
    <fullName>RunId__c</fullName>
    <label>Run Id</label>
    <description>Id of the FC_CrewRun__c record. The LWC can query this record for full task-level details and step traces.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>