force-app/main/default/objects/FC_CrewEvent__e/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <label>Success</label>
    <description>True when all tasks completed successfully. False when the crew failed or was stopped early.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>